--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
     </style>
   </head>
   <body>
-    <header>
-      <h1>10,000+ of our users love our products.</h1>
-      <h2>
+    <header class="intro">
+      <h1 class="intro-head">10,000+ of our users love our products.</h1>
+      <h2 class="intro-text">
         We only provide great products combined with excellent customer service.
         See what our satisfied customers are saying about our services.
       </h2>
     </header>
 
-    <section>
-      <div>
-        <div>
+    <section class="ratings">
+      <div class="ratings-box">
+        <div class="ratings-score">
           <img src="images/icon-star.svg" alt="" />
           <img src="images/icon-star.svg" alt="" />
           <img src="images/icon-star.svg" alt="" />
@@ -50,8 +50,8 @@
         </div>
         <h3>Rated 5 Stars in Reviews</h3>
       </div>
-      <div>
-        <div>
+      <div class="ratings-box">
+        <div class="ratings-score">
           <img src="images/icon-star.svg" alt="" />
           <img src="images/icon-star.svg" alt="" />
           <img src="images/icon-star.svg" alt="" />
@@ -60,8 +60,8 @@
         </div>
         <h3>Rated 5 Stars in Report Guru</h3>
       </div>
-      <div>
-        <div>
+      <div class="ratings-box">
+        <div class="ratings-score">
           <img src="images/icon-star.svg" alt="" />
           <img src="images/icon-star.svg" alt="" />
           <img src="images/icon-star.svg" alt="" />
@@ -72,11 +72,13 @@
       </div>
     </section>
 
-    <section>
-      <div>
-        <img src="images/image-colton.jpg" alt="" />
-        <p>Colton Smith</p>
-        <p>Verified Buyer</p>
+    <section class="testimonials">
+      <div class="testimonial-box">
+        <div class="testimonial-biog">
+          <img class="biog-photo" src="images/image-colton.jpg" alt="" />
+          <p>Colton Smith</p>
+          <p>Verified Buyer</p>
+        </div>
         <p>
           "We needed the same printed design as the one we had ordered a week
           prior. Not only did they find the original order, but we also received
@@ -84,10 +86,12 @@
         </p>
       </div>
 
-      <div>
-        <img src="images/image-irene.jpg" alt="" />
-        <p>Irene Roberts</p>
-        <p>Verified Buyer</p>
+      <div class="testimonial-box">
+        <div class="testimonial-biog">
+          <img class="biog-photo" src="images/image-irene.jpg" alt="" />
+          <p>Irene Roberts</p>
+          <p>Verified Buyer</p>
+        </div>
         <p>
           "Customer service is always excellent and very quick turn around.
           Completely delighted with the simplicity of the purchase and the speed
@@ -95,10 +99,12 @@
         </p>
       </div>
 
-      <div>
-        <img src="images/image-anne.jpg" alt="" />
-        <p>Anne Wallace</p>
-        <p>Verified Buyer</p>
+      <div class="testimonial-box">
+        <div class="testimonial-biog">
+          <img class="biog-photo" src="images/image-anne.jpg" alt="" />
+          <p>Anne Wallace</p>
+          <p>Verified Buyer</p>
+        </div>
         <p>
           "Put an order with this company and can only praise them for the very
           high standard. Will definitely use them again and recommend them to
