Verified profiles mobile device

--- a/index.html
+++ b/index.html
@@ -76,10 +76,12 @@
       <div class="testimonial-box">
         <div class="testimonial-biog">
           <img class="biog-photo" src="images/image-colton.jpg" alt="" />
-          <p>Colton Smith</p>
-          <p>Verified Buyer</p>
+          <div class="biog-text">
+            <p class="biog-name">Colton Smith</p>
+            <p class="biog-role">Verified Buyer</p>
+          </div>
         </div>
-        <p>
+        <p class="biog-quote">
           "We needed the same printed design as the one we had ordered a week
           prior. Not only did they find the original order, but we also received
           it in time. Excellent!"
@@ -89,10 +91,12 @@
       <div class="testimonial-box">
         <div class="testimonial-biog">
           <img class="biog-photo" src="images/image-irene.jpg" alt="" />
-          <p>Irene Roberts</p>
-          <p>Verified Buyer</p>
+          <div class="biog-text">
+            <p class="biog-name">Irene Roberts</p>
+            <p class="biog-role">Verified Buyer</p>
+          </div>
         </div>
-        <p>
+        <p class="biog-quote">
           "Customer service is always excellent and very quick turn around.
           Completely delighted with the simplicity of the purchase and the speed
           of delivery."
@@ -102,10 +106,12 @@
       <div class="testimonial-box">
         <div class="testimonial-biog">
           <img class="biog-photo" src="images/image-anne.jpg" alt="" />
-          <p>Anne Wallace</p>
-          <p>Verified Buyer</p>
+            <div class="biog-text">
+              <p class="biog-name">Anne Wallace</p>
+              <p class="biog-role">Verified Buyer</p>
+            </div>
         </div>
-        <p>
+        <p class="biog-quote">
           "Put an order with this company and can only praise them for the very
           high standard. Will definitely use them again and recommend them to
           everyone!"
