Initial desktop structure

--- a/index.html
+++ b/index.html
@@ -31,49 +31,52 @@
     </style>
   </head>
   <body>
-    <header class="intro">
-      <h1 class="intro-head">10,000+ of our users love our products.</h1>
-      <h2 class="intro-text">
-        We only provide great products combined with excellent customer service.
-        See what our satisfied customers are saying about our services.
-      </h2>
-    </header>
+    <div class="header-grid">
+      <header class="intro">
+        <h1 class="intro-head">10,000+ of our users love our products.</h1>
+        <h2 class="intro-text">
+          We only provide great products combined with excellent customer
+          service. See what our satisfied customers are saying about our
+          services.
+        </h2>
+      </header>
 
-    <section class="ratings">
-      <div class="ratings-box">
-        <div class="ratings-score">
-          <img src="images/icon-star.svg" alt="" />
-          <img src="images/icon-star.svg" alt="" />
-          <img src="images/icon-star.svg" alt="" />
-          <img src="images/icon-star.svg" alt="" />
-          <img src="images/icon-star.svg" alt="" />
+      <section class="ratings">
+        <div class="ratings-box">
+          <div class="ratings-score rb-1">
+            <img src="images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="" />
+          </div>
+          <h3>Rated 5 Stars in Reviews</h3>
         </div>
-        <h3>Rated 5 Stars in Reviews</h3>
-      </div>
-      <div class="ratings-box">
-        <div class="ratings-score">
-          <img src="images/icon-star.svg" alt="" />
-          <img src="images/icon-star.svg" alt="" />
-          <img src="images/icon-star.svg" alt="" />
-          <img src="images/icon-star.svg" alt="" />
-          <img src="images/icon-star.svg" alt="" />
+        <div class="ratings-box rb-2">
+          <div class="ratings-score">
+            <img src="images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="" />
+          </div>
+          <h3>Rated 5 Stars in Report Guru</h3>
         </div>
-        <h3>Rated 5 Stars in Report Guru</h3>
-      </div>
-      <div class="ratings-box">
-        <div class="ratings-score">
-          <img src="images/icon-star.svg" alt="" />
-          <img src="images/icon-star.svg" alt="" />
-          <img src="images/icon-star.svg" alt="" />
-          <img src="images/icon-star.svg" alt="" />
-          <img src="images/icon-star.svg" alt="" />
+        <div class="ratings-box rb-3">
+          <div class="ratings-score">
+            <img src="images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="" />
+            <img src="images/icon-star.svg" alt="" />
+          </div>
+          <h3>Rated 5 Stars in BestTech</h3>
         </div>
-        <h3>Rated 5 Stars in BestTech</h3>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <section class="testimonials">
-      <div class="testimonial-box">
+      <div class="testimonial-box tb-1">
         <div class="testimonial-biog">
           <img class="biog-photo" src="images/image-colton.jpg" alt="" />
           <div class="biog-text">
@@ -88,7 +91,7 @@
         </p>
       </div>
 
-      <div class="testimonial-box">
+      <div class="testimonial-box tb-2">
         <div class="testimonial-biog">
           <img class="biog-photo" src="images/image-irene.jpg" alt="" />
           <div class="biog-text">
@@ -103,13 +106,13 @@
         </p>
       </div>
 
-      <div class="testimonial-box">
+      <div class="testimonial-box tb-3">
         <div class="testimonial-biog">
           <img class="biog-photo" src="images/image-anne.jpg" alt="" />
-            <div class="biog-text">
-              <p class="biog-name">Anne Wallace</p>
-              <p class="biog-role">Verified Buyer</p>
-            </div>
+          <div class="biog-text">
+            <p class="biog-name">Anne Wallace</p>
+            <p class="biog-role">Verified Buyer</p>
+          </div>
         </div>
         <p class="biog-quote">
           "Put an order with this company and can only praise them for the very
